# phink

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.Docker.md  README.md  SECURITY.md  a.out  abc.out  bete2seed  config.toml  cov.txt  denylist.txt  foo.out  instrumented_lib.rs  malicious_seed  package-lock.json  phink.toml  phink_temp_test.toml  rust-toolchain.toml  rustc-ice-2024-10-17T15_05_26-99699.txt  rustc-ice-2024-10-17T15_05_47-99776.txt  rustc-ice-2024-10-17T15_07_52-1055.txt  rustc-ice-2024-10-17T15_08_12-1074.txt  terminalizer.yml  toz.bash
.cargo/: config.toml
.docker/: Dockerfile
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docker-publish.yml  docker.yml  format.yml  gh-pages.yml  rust.yml  static.yml  udeps.yml
1/: abc  abc.out  doesnt_crash_bigger_coverage  doesnt_crash_small_coverage
book/: INTRO.md  book.toml
book/documentation/: 404.html  ADVANCED.html  BENCHMARKS.html  CAMPAIGN.html  CNAME  CONCEPT.html  CONFIG.html  FAQ.html  INTRO.html  INVARIANTS.html  RUNTIME.html  SEEDS.html  START.html  TECH.html  TROUBLESHOTING.html  index.html  print.html  searchindex.js  searchindex.json
book/src/: ADVANCED.md  BENCHMARKS.md  CAMPAIGN.md  CONCEPT.md  CONFIG.md  FAQ.md  INTRO.md  INVARIANTS.md  RUNTIME.md  SEEDS.md  START.md  SUMMARY.md  TECH.md  TROUBLESHOTING.md
contract_multisig/: Cargo.toml  lib.rs
contract_path_test_2/: lib.rs
crashes/: .694927acc70a0b35-2.metadata  .6cfe0957931f4f20.metadata  .af9878330a896be3.metadata  694927acc70a0b35-2  6cfe0957931f4f20  af9878330a896be3
dummy_contract/: lib.rs
just_a_random_path/: lib.rs
output_afl_old/phink/corpus/: id:000001,time:0,execs:0,orig:id:000075,src:000066+000001,time:7682244,execs:15817791,op:splice,rep:1,+cov  id:000004,time:0,execs:0,orig:id:000051,src:000035,time:1061533,execs:6018,op:havoc,rep:1,+cov  id:000007,time:0,execs:0,orig:id:000069,src:000019,time:7676277,execs:15811014,op:arith8,pos:0,val:+5  id:000018,time:0,execs:0,orig:id:000033,src:000020+000031,time:2814,execs:23388,op:splice,rep:1  id:000018,time:0,execs:0,orig:id:000054,src:000017,time:2221954,execs:10906,op:havoc,rep:6,+cov  id:000022,time:0,execs:0,orig:id:000047,src:000027+000000,time:488526,execs:3288,op:splice,rep:1,+cov  id:000037,time:0,execs:0,orig:id:000012,src:000001,time:304,execs:3076,op:havoc,rep:8,+cov  id:000045,time:0,execs:0,orig:id:000006,src:000001,time:135,execs:1269,op:havoc,rep:4  id:000046,time:0,execs:0,orig:id:000021,src:000005,time:824,execs:9144,op:havoc,rep:10  id:000048,time:0,execs:0,orig:id:000003,src:000001,time:78,execs:653,op:havoc,rep:2,+cov  id:000050,time:0,execs:0,orig:id:000001,src:000000,time:14,execs:23,op:havoc,rep:1,+cov  id:000053,time:0,execs:0,orig:id:000046,src:000004,time:487619,execs:1683,op:havoc,rep:1,+cov  id:000055,time:0,execs:0,orig:id:000048,src:000044+000001,time:634741,execs:409305,op:splice,rep:1,+cov  id:000057,time:0,execs:0,orig:id:000053,sync:corpus_0,src:000000,+cov  id:000059,time:0,execs:0,orig:id:000034,src:000027,time:3119,execs:24571,op:havoc,rep:2,+cov  id:000059,time:0,execs:0,orig:id:000055,src:000028+000048,time:2253243,execs:140174,op:splice,rep:1,+cov  id:000068,time:0,execs:0,orig:id:000068,src:000019,time:7676143,execs:15810945,op:quick,pos:0  id:000076,time:0,execs:0,orig:id:000059,src:000000,time:3204711,execs:178718,op:havoc,rep:2,+cov  id:000079,src:000075,time:154569493,execs:20413547,op:havoc,rep:2,+cov
output_afl_old/phink/corpus_old/: id:000003,time:0,execs:0,orig:id:000044,src:000037,time:137879,execs:417892,op:havoc,rep:1  id:000003,time:0,execs:0,orig:id:000056,sync:corpus_0,src:000000  id:000004,time:0,execs:0,orig:id:000040,sync:secondaryfuzzer2,src:000033  id:000004,time:0,execs:0,orig:id:000043,src:000022+000032,time:22009,execs:77940,op:splice,rep:3,+cov  id:000006,time:0,execs:0,orig:id:000038,src:000037,time:3694,execs:26609,op:havoc,rep:3,+cov  id:000008,time:0,execs:0,orig:id:000039,sync:secondaryfuzzer5,src:000029  id:000009,time:0,execs:0,orig:id:000042,sync:secondaryfuzzer3,src:000033  id:000013,time:0,execs:0,orig:id:000005,src:000001,time:87,execs:735,op:havoc,rep:4  (+28 more)
phink/: allowlist.txt  selectors.dict
sample/: README.md  build.rs  build.sh  clean.sh  flipper.contract  flipper.json  flipper.wasm  xxx.rs
sample/cross_message_bug/: Cargo.toml  lib.rs
sample/dns/: .gitignore  Cargo.toml  lib.rs
sample/dns/loger/: Cargo.toml
sample/dns/logger/: Cargo.toml  lib.rs
sample/dns_instrumented/: dns.json  dns.wasm
sample/dummy/: .gitignore  Cargo.toml  lib.rs  toz.json
sample/flipper/: Cargo.toml  lib.rs
sample/fuzzme/: Cargo.toml  lib.rs
sample/multi-contract-caller/: Cargo.toml  build-all.sh  get_constructor.py  lib.rs
sample/overflow/: Cargo.toml  lib.rs
sample/transfer/: Cargo.toml  lib.rs
sample/vault/: Cargo.toml  lib.rs
scripts/: clippy.sh  clippy_fix_fmt.sh  test_on_docker.sh
src/: config.rs  contract_helper.rs  contract_kevin.rs  coverage.rs  deploy.rs  ext.rs  externalities.rs  extrinsics.rs  fuzzer.rs  fuzzer_engine.rs  ink_helper.rs  invariants.rs  lib.rs  main.rs  main_with_clipy.rs  mocks.rs  payload.rs  remote.rs  runtime.rs  selectors.rs  utils.rs  ziggy.rs
src/cli/: config.rs  env.rs  mod.rs  ziggy.rs
src/cli/ui/: chart.rs  (+10 more)
src/contract/: mod.rs  payload.rs  remote.rs  runtime.rs  selector.rs
src/cover/: coverage.rs  mod.rs  report.rs  trace.rs
src/fuzz/: engine.rs  fuzz.rs  invariants.rs  mod.rs
src/fuzzer/: bug.rs  coverage.rs  engine.rs  envbuilder.rs  environment.rs  fuzz.rs  instrument.rs  invariants.rs  libafl.rs  manager.rs  message.rs  mod.rs  parser.rs  report.rs  ziggy.rs
src/instrumenter/: cleaner.rs  instrument.rs  instrumentation.rs  instrumented_path.rs  mod.rs  path.rs  seeder.rs  seedgen.rs
tests/: cli_fuzz_integration_test.rs  cli_instrument_integration_test.rs  cli_integration_test.rs  sample_integration_test.rs
tests/docker/: Dockerfile
tests/shared/: mod.rs  samples.rs
toooozseed/: Cargo.toml  lib.rs
(+751 files in other folders)
