[package]
name = "phink"
description = "🐙 Phink, a ink! smart-contract property-based and coverage-guided fuzzer"
repository = "https://github.com/kevin-valerio/phink"
keywords = ["ink", "fuzz", "substrate"]
readme = "README.md"
authors = ["Kevin Valerio <kevin@srlabs.de>"]
version = "0.1.2"
edition = "2021"
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools::testing"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "phink"
path = "src/main.rs"

[lib]
name = "phink_lib"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-contracts/std",
    "pallet-insecure-randomness-collective-flip/std",
    "parity-scale-codec/std",
    "scale-info/std",
]

[dev-dependencies]
assert_cmd = { version = "2.0.16" }
toml_edit = { version = "0.22.20" }
predicates = { version = "3.1.2" }
tempfile = { version = "3.12.0" }

[dependencies]
# Standard crates
seq-macro = { version = "0.3.5" }
scale-info = { version = "2.6.0", default-features = false }
prettytable-rs = { version = "0.10.0" }
ziggy = { version = "1.1.0", default-features = false }
hex = { version = "0.4.3" }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.14" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0.115" }
paste = { version = "1.0.14" }
anyhow = { version = "1.0.81" }
strsim = { version = "0.11.1" }
tracing = { version = "0.1.40" }
clap = { version = "4.5.4", features = ["derive"] }
syn = { version = "2.0.71", features = ["parsing", "full", "visit-mut"] }
quote = { version = "1.0.36" }
proc-macro2 = { version = "1.0.81", features = ["span-locations"] }
rand = { version = "0.8" }
walkdir = { version = "2.5.0" }
regex = "1.10.4"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
crossterm = { version = "0.28.1" }
# Substrate-specific crates
parity-scale-codec = { version = "*", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.10.0", default-features = false }

# ink! crates
ink_metadata = { version = "*" }
ink_env = { version = "*" }
contract-transcode = { version = "*" }
contract-metadata = { version = "*" }
predicates = "3.1.2"
tempfile = "3.12.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
