[package]
name = "phink"
description = "🐙 Phink, a ink! smart-contract property-based and coverage-guided fuzzer"
repository = "https://github.com/kevin-valerio/phink"
homepage = "https://srlabs.github.io/phink/"
keywords = ["ink", "fuzz", "substrate"]
readme = "README.md"
authors = ["Kevin Valerio <kevin@srlabs.de>"]
version = "0.1.4"
license = "WTFPL"
edition = "2021"
categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools::testing"]
exclude = ["tests/fixtures/corpus/**"]

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true

[[bin]]
name = "phink"
path = "src/main.rs"

[lib]
name = "phink_lib"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-contracts/std",
    "pallet-insecure-randomness-collective-flip/std",
    "parity-scale-codec/std",
    "scale-info/std",
]


[dev-dependencies]
assert_cmd = { version = "2.0.16" }
predicates = { version = "3.1.2" }

[dependencies]
# Standard crates and helpers
tempfile = { version = "3.12.0" }
seq-macro = { version = "0.3.5" }
scale-info = { version = "2.6.0", default-features = false }
prettytable-rs = { version = "0.10.0" }
ziggy = { version = "1.2.1", default-features = false }
hex = { version = "0.4.3" }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.14" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0.115" }
paste = { version = "1.0.14" }
anyhow = { version = "1.0.81" }
strsim = { version = "0.11.1" }
tracing = { version = "0.1.40" }
clap = { version = "4.5.4", features = ["derive"] }
syn = { version = "2.0.71", features = ["parsing", "full", "visit-mut"] }
quote = { version = "1.0.36" }
proc-macro2 = { version = "1.0.81", features = ["span-locations"] }
rand = { version = "0.8" }
walkdir = { version = "2.5.0" }
ctrlc = { version = "3.4.5" }
regex = { version = "1.10.4" }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = { version = "0.28.1" }
chrono = { version = "0.4.38" }
toml_edit = { version = "0.22.22" }

# Substrate-specific crates
parity-scale-codec = { version = "3.6.12" }
sp-core = { version = "34.0.0" }
sp-keystore = { version = "0.40.0" }
frame-support = { version = "38.0.0" }
sp-runtime = { version = "39.0.0" }
sp-io = { version = "38.0.0" }
frame-system = { version = "38.0.0" }
pallet-balances = { version = "39.0.0" }
pallet-timestamp = { version = "37.0.0" }
pallet-transaction-payment = { version = "38.0.0" }
pallet-contracts = { version = "38.0.0" }
pallet-insecure-randomness-collective-flip = { version = "26.0.0" }

# ink! crates
ink_metadata = { version = "5.0.0" }
ink_env = { version = "5.0.0" }
contract-transcode = { version = "4.1.1" }
contract-metadata = { version = "4.1.1" }
colored = { version = "2.1.0" }
time = { version = "0.3.36" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
